tdf#167582 consider orientation of external lookup source

This is a follow up to my 5c0961129820fbc9dc8ec12c8a43a352ef1856a3.
Changing bVertical to (nResRow2 - nResRow1) > 0 has introduced a
regression with LOOKUP with external references. They need the same
change, thus I remove the restriction to inline array.

LOOKUP with external references had wrong results for mixed orientation
of lookup vector and result vector same as inline arrays. Only that
mixed orientations are unusually for external references and thus the
error was not detected before.

Change-Id: I2fc6d58b7fc84ae81f39b76534dc4ca99bdd6f56
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188304
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189102